--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,12 @@ description = "The ORM for AI Agents"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "anyio>=4.9.0",
     "dotenv>=0.9.9",
     "fastastra>=0.1.37",
+]
+
+[dependency-groups]
+dev = [
+    "pytest-asyncio>=0.26.0",
     "pytest>=8.3.5",
 ]
