--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "stash-data-mcp"
-version = "0.1.1"
+version = "0.1.3"
 description = "The ORM for AI Agents"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -19,4 +19,4 @@ dev = [
 uv.package = true
 
 [project.scripts] 
-server = "stash_data_mcp.server:main"
+stash-data-mcp = "stash_data_mcp.server:run"
